Added support for custom client for certificate extraction (#639)
* Added support for custom client for certificate extraction

* Added license header

* Improved api for clientconfig

* Switch to Java-WebSocket library

* Removed checked exception

* adjusted dependency version

* Prevent extending the class

* Removed redundant interface

* Adjusted logs